# flow-gate

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
devflow/: changelog.py  ci_gate.py  main.py
devflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
flow_gate/: bump.py  changelog.py  coverage.py  gate.py  main.py
flow_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flowgate_cli/: bump.py  coverage.py  gate.py  main.py
tests/: test_basic.py
