[project]
name = "devflow"
version = "0.1.0"
description = "Developer Workflow Automation CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "packaging>=23.0",
]

[project.scripts]
devflow = "devflow.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
