[project]
name = "flowgate-cli"
version = "0.1.0"
description = "Developer Workflow Automation CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Maxwell Sarpong", email = "maxwellsarpong@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "packaging>=23.0",
]

[project.scripts]
flowgate-cli = "flowgate_cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
